package(default_visibility = ["//visibility:public"])

filegroup(
    name = "common_binaries",
    srcs = glob([
        "bin/*",
        "lib/*",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "common_includes",
    srcs = glob([
        "lib/clang/*/include/**",
        "include/c++/**",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "glibc_binaries",
    srcs = glob([
        "lib/x86_64-unknown-linux-gnu/*",
    ]) + [
        ":common_binaries",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "glibc_includes",
    srcs = glob([
        "include/x86_64-unknown-linux-gnu/c++/**",
    ]) + [
        ":common_includes",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "musl_binaries",
    srcs = glob([
        "lib/x86_64-unknown-linux-musl/*",
    ]) + [
        ":common_binaries",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "musl_includes",
    srcs = glob([
        "lib/clang/*/include/**",
        "include/c++/**",
        "include/x86_64-unknown-linux-musl/c++/**",
    ]) + [
        ":common_includes",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "binaries",
    actual = ":glibc_binaries",
    deprecation = "Use :glibc_binaries or :musl_binaries instead",
    visibility = ["//visibility:public"],
)

alias(
    name = "includes",
    actual = ":glibc_binaries",
    deprecation = "Use :glibc_binaries or :musl_binaries instead",
    visibility = ["//visibility:public"],
)

# Special python3 for u-boot.
py_runtime(
    name = "python3",
    files = glob(
        ["python3/**"],
        exclude = [
            "**/site-packages/**",
        ],
    ),
    interpreter = "python3/bin/python3",
    python_version = "PY3",
    visibility = ["//u-boot:__subpackages__"],
)

exports_files([
    "bin/clang",
    "bin/clang++",
    "bin/llvm-ar",
    "bin/llvm-objcopy",
    "bin/llvm-strip",
])
