load("@rules_python//python:defs.bzl", "py_runtime")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "binaries",
    srcs = glob([
        "bin/*",
        "lib/*",
        "lib/x86_64-unknown-linux-gnu/*",
    ]),
)

filegroup(
    name = "includes",
    srcs = glob([
        "lib/clang/*/include/**",
        "include/c++/**",
        "include/x86_64-unknown-linux-gnu/c++/**",
    ]),
)

# Special python3 for libclang and u-boot.
py_runtime(
    name = "python3",
    files = glob([
        "python3/**",
        "lib/python3/site-packages/clang/**",
    ]),
    interpreter = "python3/bin/python3",
    visibility = ["//visibility:public"],
)
