# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":versions.bzl", "VERSIONS")

bzl_library(
    name = "architecture_constants",
    srcs = ["architecture_constants.bzl"],
    visibility = ["//visibility:private"],
)

bzl_library(
    name = "clang_toolchain_repository",
    srcs = ["clang_toolchain_repository.bzl"],
    visibility = ["//build/kernel/kleaf/docs:__pkg__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//visibility:public"],
)

constraint_setting(name = "clang_version")

[constraint_value(
    name = version,
    constraint_setting = ":clang_version",
    visibility = ["//visibility:public"],
) for version in VERSIONS]
